--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "next build",
         "start": "next start",
         "fetch-schema": "npx apollo schema:download --endpoint=https://vitl-hasura.herokuapp.com/v1/graphql graphql-schema.json",
-        "generate-types": "npx apollo codegen:generate --localSchemaFile=graphql-schema.json --target=typescript --tagName=gql",
+        "generate-types": "npx apollo codegen:generate --localSchemaFile=graphql-schema.json --target=typescript --tagName=gql --outputFlat",
+        "clean-generated": "find . -name '__generated__' -type d -prune -exec rm -rf '{}' +",
         "lint": "next lint"
     },
     "dependencies": {
