--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "build": "next build",
         "start": "next start",
         "fetch-schema": "npx apollo schema:download --endpoint=https://vitl-hasura.herokuapp.com/v1/graphql graphql-schema.json",
-        "generate-types": "npx apollo codegen:generate --localSchemaFile=graphql-schema.json --target=typescript --tagName=gql --outputFlat",
-        "clean-generated": "find . -name '__generated__' -type d -prune -exec rm -rf '{}' +",
+        "generate-types" : "npx apollo codegen:generate --localSchemaFile=graphql-schema.json --target=typescript --tagName=gql",
         "lint": "next lint"
     },
     "dependencies": {
@@ -17,7 +16,6 @@
         "next": "11.1.2",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "react-loading-icons": "^1.0.6",
         "styled-components": "^5.3.1"
     },
     "devDependencies": {
