--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-loading-icons": "^1.0.6",
+        "sharp": "^0.29.1",
         "styled-components": "^5.3.1"
     },
     "devDependencies": {
